# MiniQuad

./: .gitignore  Makefile
.cargo/: config.toml
components/esp_eth_enc28j60/: CMakeLists.txt  esp_eth_enc28j60.c
esp_docker/: Dockerfile  dirnet.patch  install-rust-toolchain.sh
esp_idf/esp-idf-hal/: Cargo.toml
esp_idf/esp-idf-sys/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
esp_idf/esp-idf-sys/patches/: missing_riscv_atomics_fix.diff  missing_xtensa_atomics_fix.diff  pthread_destructor_fix.diff
esp_idf/esp-idf-sys/resources/cmake_project/: CMakeLists.txt
esp_idf/esp-idf-sys/src/: alloc.rs  error.rs  lib.rs  panic.rs  patches.rs  start.rs
esp_idf/esp-idf-sys/src/include/esp-8266-rtos-sdk/: bindings.h
esp_idf/esp-idf-sys/src/include/esp-idf/: bindings.h
esp_idf/esp-idf-sys/src/patches/: lstat.rs  pthread_rwlock.rs
test/: Cargo.toml  partitions.csv  sdkconfig.defaults
test/docs/: README.md
test/scripts/: build.sh  flash-esp.sh  flash.sh  run-wokwi.sh
test/src/: bindings.h  main.rs
